deploymentMysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-mysql
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webserver
    spec:
       containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
